# rhabdomancer

./: .taplo.toml  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  build.rs  crates.js  help.html  ida-plugin-stub.py  ida-plugin.json  search-index.js  settings.html  src-files.js
.cargo/: config.toml
aho_corasick/: all.html  enum.AhoCorasickKind.html  enum.Anchored.html  enum.MatchErrorKind.html  enum.MatchKind.html  enum.StartKind.html  index.html  struct.AhoCorasick.html  struct.AhoCorasickBuilder.html  struct.BuildError.html  struct.FindIter.html  struct.FindOverlappingIter.html  struct.Input.html  struct.Match.html  struct.MatchError.html  struct.PatternID.html  struct.PatternIDError.html  struct.Span.html  struct.StreamFindIter.html
anyhow/: all.html  fn.Ok.html  index.html  macro.anyhow.html  macro.bail.html  macro.ensure.html  struct.Chain.html  struct.Error.html  trait.Context.html  type.Result.html
aquamarine/: all.html  attr.aquamarine.html  fn.check_input_attrs.html  index.html  sidebar-items.js
arraydeque/: all.html  fn.slice_assume_init_mut.html  fn.slice_assume_init_ref.html  fn.wrap_add.html  fn.wrap_sub.html  index.html  sidebar-items.js  struct.ArrayDeque.html  struct.CapacityError.html  struct.Drain.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  trait.RangeArgument.html
async_trait/: all.html  attr.async_trait.html  index.html
autocxx/: all.html  fn.as_copy.html  fn.as_mov.html  fn.as_new.html  index.html  macro.block.html  macro.block_constructors!.html  macro.block_constructors.html  macro.concrete!.html  macro.concrete.html  macro.ctype_wrapper!.html  macro.ctype_wrapper.html  macro.exclude_impls!.html  macro.exclude_impls.html  macro.exclude_utilities!.html  macro.exclude_utilities.html  macro.extern_cpp_opaque_type!.html  macro.extern_cpp_opaque_type.html  macro.extern_cpp_type!.html  macro.extern_cpp_type.html  macro.extern_rust_type!.html  macro.extern_rust_type.html  macro.generate.html  macro.generate_all!.html  macro.generate_all.html  macro.generate_ns!.html  macro.generate_ns.html  macro.generate_pod!.html  macro.generate_pod.html  macro.include.html  macro.include_cpp!.html  macro.include_cpp.html  macro.instantiable!.html  macro.instantiable.html  macro.name.html  macro.pod!.html  macro.pod.html  macro.rust_type!.html  macro.rust_type.html  macro.safety!.html  (+29 more)
autocxx_macro/: all.html  attr.cpp_semantics.html  attr.extern_rust_function.html  attr.extern_rust_type.html  attr.subclass.html  index.html  macro.include_cpp_impl!.html  macro.include_cpp_impl.html  sidebar-items.js
autocxx_parser/: all.html  enum.AllowlistEntry.html  enum.MultiBindingsErr.html  enum.UnsafePolicy.html  index.html  sidebar-items.js  struct.ExternCppType.html  struct.IncludeCpp.html  struct.IncludeCppConfig.html  struct.MultiBindings.html  struct.RustFun.html  struct.RustPath.html  struct.Subclass.html  struct.SubclassAttrs.html
base64/: all.html  constant.PAD_BYTE.html  enum.DecodeError.html  enum.DecodeSliceError.html  enum.EncodeSliceError.html  fn.decode.html  fn.decode_engine.html  fn.decode_engine_slice.html  fn.decode_engine_vec.html  fn.decoded_len_estimate.html  fn.encode.html  fn.encode_engine.html  fn.encode_engine_slice.html  fn.encode_engine_string.html  fn.encoded_len.html  index.html
bitflags/: all.html  index.html  macro.bitflags.html  macro.bitflags_match.html  struct.Flag.html  trait.Bits.html  trait.Flags.html
conf/: rhabdomancer.toml
config/: all.html  enum.Case.html  enum.ConfigError.html  enum.FileFormat.html  enum.ValueKind.html  index.html  sidebar-items.js  struct.Config.html  struct.Environment.html  struct.File.html  struct.FileSourceFile.html  struct.FileSourceString.html  struct.Value.html  trait.AsyncSource.html  trait.FileSource.html  trait.FileStoredFormat.html  trait.Format.html  trait.Source.html  type.Map.html
const_random/: all.html  index.html  macro.const_random.html
const_random_macro/: all.html  fn.ident.html  index.html  macro.const_random.html  sidebar-items.js
convert_case/: all.html  enum.Boundary.html  enum.Case.html  enum.Pattern.html  index.html  sidebar-items.js  struct.Converter.html  struct.StateConverter.html  trait.Casing.html
crunchy/: all.html  index.html  macro.unroll.html
cxx/: all.html  attr.bridge.html  index.html  macro.chars.html  macro.let_cxx_string.html  macro.type_id.html  sidebar-items.js  struct.CxxString.html  struct.CxxVector.html  struct.Exception.html  struct.SharedPtr.html  struct.UniquePtr.html  struct.WeakPtr.html  struct.void.html  trait.ExternType.html  type.String.html  type.Vector.html
cxxbridge_macro/: all.html  attr.bridge.html  index.html  sidebar-items.js
dlv_list/: all.html  enum.Entry.html  fn.create_initial_generation.html  index.html  sidebar-items.js  struct.Drain.html  struct.Index.html  struct.Indices.html  struct.IntoIter.html  struct.Iter.html  struct.IterMut.html  struct.NonMaxUsize.html  struct.OccupiedEntry.html  struct.VacantEntry.html  struct.VecList.html
doc/: crates.js
docs/: search-index.js  settings.html  src-files.js
encoding_rs/: all.html  constant.LONGEST_LABEL_LENGTH.html  constant.NCR_EXTRA.html  enum.BomHandling.html  enum.DecoderLifeCycle.html  enum.EncoderResult.html  fn.checked_add.html  fn.checked_add_opt.html  fn.checked_div.html  fn.checked_min.html  fn.checked_mul.html  fn.checked_next_power_of_two.html  fn.in_inclusive_range.html  fn.in_inclusive_range16.html  fn.in_inclusive_range32.html  fn.in_inclusive_range8.html  fn.in_range16.html  fn.in_range32.html  fn.write_ncr.html  index.html  sidebar-items.js  static.ENCODINGS_IN_LABEL_SORT.html  static.LABELS_SORTED.html  struct.Decoder.html  struct.Encoder.html  struct.Encoding.html
erased_serde/: all.html  fn.serialize.html  (+8 more)
(+59473 files in other folders)
