[package]
name = "rhabdomancer"
version = "0.6.1-alpha"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Vulnerability research assistant that locates calls to potentially insecure API functions in a binary file."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/rhabdomancer"
documentation = "https://0xdeadbeef.info/rhabdomancer/rhabdomancer/"
license = "MIT"
keywords = ["reverse-engineering", "binary-file", "vuln-dev", "ida", "idalib"]
categories = ["security", "command-line-utilities"]
exclude = [".cargo/*", ".github/*", ".img/*", "tests/*", "ida-plugin.json"]

[dependencies]
idalib = "0.6"
anyhow = "1.0"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
regex = "1.11"

[build-dependencies]
idalib-build = "0.6"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"

[lints.rust]
missing_docs = { level = "warn" }

[profile.release]
# see https://github.com/johnthagen/min-sized-rust
strip = true
# opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
debug = false
