[package]
name = "rhabdomancer"
version = "0.9.4-alpha"
authors = ["Marco Ivaldi <raptor@0xdeadbeef.info>"]
edition = "2024"
description = "Vulnerability research assistant that locates calls to potentially insecure API functions in a binary file."
homepage = "https://0xdeadbeef.info/"
repository = "https://github.com/0xdea/rhabdomancer"
documentation = "https://0xdeadbeef.info/rhabdomancer/rhabdomancer/"
license = "MIT"
keywords = ["reverse-engineering", "binary-file", "vuln-dev", "ida", "idalib"]
categories = ["security", "command-line-utilities"]
exclude = [
    ".cargo/*",
    ".github/*",
    ".img/*",
    ".gitignore",
    ".taplo.toml",
    "tests/*",
    "ida-plugin.json",
    "ida-plugin-stub.py",
]

[dependencies]
idalib = "0.9"
anyhow = "1.0"
config = { version = "0.15", default-features = false, features = ["toml"] }
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
idalib-build = "0.9"

[[test]]
name = "tests"
path = "tests/main.rs"
harness = false

[profile.release]
strip = true
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"

[profile.dev]
debug = false

[lints]
workspace = true

[workspace.lints.rust]
missing_docs = { level = "warn" }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
restriction = { level = "warn", priority = -1 }
# allow some lints
blanket_clippy_restriction_lints = "allow"
std_instead_of_core = "allow"
std_instead_of_alloc = "allow"
arbitrary_source_item_ordering = "allow"
implicit_return = "allow"
question_mark_used = "allow"
print_stdout = "allow"
print_stderr = "allow"
min_ident_chars = "allow"
single_char_lifetime_names = "allow"
impl_trait_in_params = "allow"
missing_inline_in_public_items = "allow"
single_call_fn = "allow"
use_debug = "allow"
multiple_crate_versions = "allow"
significant_drop_tightening = "allow"
